# calgorithms_practice

./: .gitignore  CMakeLists.txt  binarytree.c  build.sh  linkedlist.h  workspace.code-workspace
include/: adjacencymatrix.h  binaryheap.h  binarytree.h  linkedlist.h
src/: CMakeLists.txt  adjacencymatrix.c  binaryheap.c  binarytree.c  leetcode5.c  linkedlist.c
tests/: CMakeLists.txt  adjacencymatrixtest.c  binaryheaptest.c  binarytreetest.c  linkedlisttest.c
